2007-05-08  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimptexteditor.c: use GtkWindow::transient-for just
	for the fun of using another GTK+ 2.10 feature.

2007-05-07  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpbaseenums.[ch] (GimpCloneType): changed strings.

2007-05-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpbrushtool.[ch] (gimp_brush_tool_draw): moved
	brush drawing code to the new function gimp_brush_tool_draw_brush().

	* app/tools/gimpsourcetool.c: (gimp_source_tool_draw): draw the
	brush outline at the source position (bug #435545).

2007-05-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/blur.c (blur_prepare_row): clamp to the first
	row, not the second. Also update the progress less often.

2007-05-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/gauss.c: reduce rounding errors when converting
	between premultiplied and separated alpha. Fixes bug #383870.

2007-05-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/fits/fitsrw.c
	* plug-ins/fits/fits.c: applied modified patch from Peter
	Kirchgessner. Fixes creation of the last data record and makes
	handling of float values independent of the locale (bug #351656).

2007-05-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpfu.py: don't add the radiobuttons into a
	GtkFrame.

	* plug-ins/pygimp/plug-ins/sphere.py: added a PF_RADIO parameter
	as an example and for testing purposes.

2007-05-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mapcolor.c: try to do something reasonable for
	the empty source range (bug #436145).

2007-05-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c: start with a reasonable size and
	paned position and remember the window size and paned position at
	least within a GIMP session.

2007-05-06  Sven Neumann  <sven@gimp.org>

	* gimptool-2.0.in: define datarootdir before datadir (bug #436386).

2007-05-06  Sven Neumann  <sven@gimp.org>

	* configure.in: require libexif >= 0.6.0.
