@@ -1,3 +1,8 @@
+2007-05-08  Karine Delvare  <edhel@gimp.org>
+
+	* plug-ins/common/papertile.c: Replace tile size with width & height,
+	without changing the plug-in interface (bug #87092).
+
 2007-05-08  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimptexteditor.c: use GtkWindow::transient-for just
